2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-ffmpeg.cpp: FfmpegDemuxer::Read: break out of the waiting loop
	when we're shutting down.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* xaml.cpp: Implement parsing of int values for enums. Fixes #611465 and
	part 1 of #595476.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.cpp: Reverse yes/no condition for ffmpeg-codecs, since it's a
	negative flag.

2010-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: CurlDownloaderResponse::Finished: we didn't succeed if we
	were aborted.

2010-06-03  Jeffrey Stedfast  <fejj@novell.com>

	* richtextbox.h (TextPointer): Stubbed out.

	* enums.cpp: Added mapping for LogicalDirection

2010-06-03  Jeffrey Stedfast  <fejj@novell.com>

	* richtextbox.cpp|h: stubbed out a ton of stuff.

	* inputmethod.h: New source file - moved the InputMethod class
	here from textbox.h

	* textbox.cpp (OnPropertyChanged): Chain up immediately if it's
	not a TextBox/PasswordBox property.

2010-06-03  Larry Ewing  <lewing@novell.com>

	* uielement.h:
	* uielement.cpp: rename xform_key to uielement_xform_key and
	expose it (temporarily) so that elements can check on this state.

	* shape.cpp: avoid the shape cache completely when there is an
	active paint transform.

2010-06-03  Larry Ewing  <lewing@novell.com>

	* uielement.cpp: attempt to compose the parent relative transforms
	correctly inside ApplyTransform.

	* mediaelement.cpp: add a missing call to ApplyTransform here.

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* deployment.cpp: Fix the LoadedClosure ref/unref issue in a
	  way that doesn't result in us reffing UIElements when
	  they're disposing.

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* deployment.cpp: We need to ref/unref the object in the
	  LoadedClosure otherwise it can be gc'ed between when we add
	  it and when we emit the loaded event.

2010-06-03  Jeffrey Stedfast  <fejj@novell.com>
